--- a/.travis.yml
+++ b/.travis.yml
@@ -7,10 +7,11 @@ env:
 before_install:
     - docker -v
     - sudo rm /usr/local/bin/docker-compose
-    - curl -L https://github.com/docker/compose/releases/download/${DOCKER_COMPOSE_VERSION}/docker-compose-`uname -s`-`uname -m` > docker-compose
+    - curl -L "https://github.com/docker/compose/releases/download/${DOCKER_COMPOSE_VERSION}/docker-compose-$(uname -s)-$(uname -m)" -o /usr/local/bin/docker-compose
     - chmod +x docker-compose
     - sudo mv docker-compose /usr/local/bin
     - which docker-compose
+    - docker-composee -v
 
 before_script:
     - docker-compose build
