--- a/.travis.yml
+++ b/.travis.yml
@@ -11,7 +11,7 @@ before_install:
     - chmod +x docker-compose
     - sudo mv docker-compose /usr/local/bin
     - which docker-compose
-    - docker-composee -v
+    - docker-compose -v
 
 before_script:
     - docker-compose build
