--- a/.travis.yml
+++ b/.travis.yml
@@ -2,7 +2,7 @@ services:
     - docker
 
 env:
-    - DOCKER_COMPOSE_VERSION
+    - DOCKER_COMPOSE_VERSION=1.22.0
 
 before_install:
     - docker -v
